c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_CheckTypeAndMergeFrom(i18n::phonenumbers::PhoneMetadata* this_ptr, const google::protobuf::MessageLite* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_Clear(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_CopyFrom(i18n::phonenumbers::PhoneMetadata* this_ptr, const i18n::phonenumbers::PhoneMetadata* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_DiscardUnknownFields(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetCachedSize(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetTypeName_as_ptr(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetTypeName_to_output(const i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* output);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_IsInitialized(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_MergeFrom(i18n::phonenumbers::PhoneMetadata* this_ptr, const i18n::phonenumbers::PhoneMetadata* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_New_arena(const i18n::phonenumbers::PhoneMetadata* this_ptr, google::protobuf::Arena* arena);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_New_no_args(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_Swap(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneMetadata* other);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_add_intl_number_format(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_add_number_format(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_carrier_specific(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_carrier_specific(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_country_code(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_emergency(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_fixed_line(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_general_desc(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_id(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_intl_number_format(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_leading_digits(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_leading_zero_possible(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_main_country_for_code(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_mobile(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_mobile_number_portable_region(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix_for_parsing(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix_transform_rule(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_no_international_dialling(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_number_format(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_pager(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_personal_number(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_preferred_extn_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_preferred_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_premium_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_same_mobile_and_fixed_line_pattern(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_shared_cost(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_short_code(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_standard_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_toll_free(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_uan(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_voicemail(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_voip(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_constructor_from(const i18n::phonenumbers::PhoneMetadata* from, i18n::phonenumbers::PhoneMetadata* output);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_constructor_no_args(i18n::phonenumbers::PhoneMetadata* output);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_country_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_default_instance();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_delete(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_destructor(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_emergency(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_fixed_line(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_general_desc(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_carrier_specific(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_country_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_emergency(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_fixed_line(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_general_desc(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_id(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_international_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_leading_digits(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_leading_zero_possible(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_main_country_for_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_mobile(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_mobile_number_portable_region(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix_for_parsing(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix_transform_rule(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_no_international_dialling(const i18n::phonenumbers::PhoneMetadata* this_ptr);