src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_CheckTypeAndMergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, from: *const ::message_lite::google::protobuf::MessageLite);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_Clear(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_CopyFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_DiscardUnknownFields(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetCachedSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetTypeName_as_ptr
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_GetTypeName_to_output(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata, output: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_IsInitialized(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_MergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_New_arena
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     arena: *mut ::arena::google::protobuf::Arena)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_New_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_Swap(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, other: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_add_intl_number_format
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_add_number_format
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_carrier_specific
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_carrier_specific(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_country_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_emergency(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_fixed_line(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_general_desc(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_id(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_international_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_intl_number_format(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_leading_digits(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_leading_zero_possible(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_main_country_for_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_mobile(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_mobile_number_portable_region(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix_for_parsing(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_national_prefix_transform_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_no_international_dialling(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_number_format(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_pager(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_personal_number(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_preferred_extn_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_preferred_international_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_premium_rate(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_same_mobile_and_fixed_line_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_shared_cost(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_short_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_standard_rate(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_toll_free(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_uan(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_voicemail(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_clear_voip(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_constructor_from(from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata, output: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_constructor_no_args(output: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_country_code(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_default_instance
    ()
      -> *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_delete(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_destructor(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_emergency
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_fixed_line
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_general_desc
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_carrier_specific(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_country_code(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_emergency(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_fixed_line(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_general_desc(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_id(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_international_prefix(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_leading_digits(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_leading_zero_possible(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_main_country_for_code(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_mobile(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_mobile_number_portable_region(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix_for_parsing(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_national_prefix_transform_rule(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_no_international_dialling(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
